--- a/QRPuzzel/main/templates/main/MainPage.html
+++ b/QRPuzzel/main/templates/main/MainPage.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <title>Puzzle</title>
-  <link rel="stylesheet" href=".\styles\MainPageStyle.css">
+  <link rel="stylesheet" href="../../static/css/MainPageStyle.css">
 </head>
 <body class="main">
   <header>
@@ -51,9 +51,9 @@
         Создать анонимную игру
       </div>
       <div class="modal-window-creating_buttons">
-        <a href="HostPage.html" class="modal-window-creating_create-game">
+        <a href="/host" class="modal-window-creating_create-game">
           Создать игру
-        <a/>
+        </a>
         <div class="modal-window-creating_sign-in">
           Войти
         </div>
@@ -95,5 +95,5 @@
     <p>Создано командой "No Homo"</p>
   </footer>
 </body>
-<script src="/scripts/MainPage.js"></script>
+<script src="../../static/js/MainPage.js"></script>
 </html>
