--- a/QRPuzzel/main/static/css/HostPageStyle.css
+++ b/QRPuzzel/main/static/css/HostPageStyle.css
@@ -29,7 +29,7 @@ header {
   background: #f0f6f0;
   border: solid 4px #222323;
   border-radius: 30px;
-  /*display: none;*/
+  display: none;
 }
 
 .description-modal-window_close {
