--- a/QRPuzzel/main/templates/main/HostPage.html
+++ b/QRPuzzel/main/templates/main/HostPage.html
@@ -3,6 +3,7 @@
 <head>
   <title>Document</title>
   <link rel="stylesheet" href="../../static/css/HostPageStyle.css">
+  <link rel="icon" type="Image/x-icon" href="/images/favicon.png">
 </head>
 <body>
   <header>
@@ -30,7 +31,7 @@
     </div>
     <div class="content-bot">
       <p class="bot-suptitle">Создание игры</p>
-      <div class="create-game">Создать</div>
+      <div class="create-game"><a href="game">Создать</div>
       <div class="bot-subtitle">Добавить описание</div>
       <div class="add-description">Добавить</div>
     </div>
