--- a/QRPuzzel/main/templates/main/MainPage.html
+++ b/QRPuzzel/main/templates/main/MainPage.html
@@ -3,6 +3,7 @@
 <head>
   <title>Puzzle</title>
   <link rel="stylesheet" href="../../static/css/MainPageStyle.css">
+  <link rel="icon" type="Image/x-icon" href="/images/favicon.png">
 </head>
 <body class="main">
   <header>
@@ -22,15 +23,21 @@
       </div>
       <div class="log-in_login">
         <p>Введите логин</p>
-        <input type="text" class="login-pass" value="Введите логин">
+        <form action="" method="post">
+          <input type="text" class="login-pass" value="Введите логин">
+        </form>
       </div>
       <div class="log-in_first-password"> 
         <p>Введите новый пароль</p>
-        <input type="password" class="login-pass" value="Пароль">
+        <form action="" method="post">
+          <input type="password" class="login-pass" value="Пароль">
+        </form>
       </div>
       <div class="log-in_second-password"> 
         <p>Введите новый пароль</p>
-        <input type="password" class="login-pass" value="Пароль">
+        <form action="" method="post">
+          <input type="password" class="login-pass" value="Пароль">
+        </form>
       </div>
       <div class="log-in_registration">
         <p>Зарегистрироваться</p>
@@ -39,8 +46,30 @@
         Войти в акккаунт
       </div>
     </div>
-    <div class="modal-window_sign-in">
 
+    <div class="modal-window_sign-in">
+      <div class="sign-in_title">
+        <p class="auth-title">Авторизация</p>
+        <div class="sign-in_close">&#215;</div>
+      </div>
+      <div class="sign-in_login">
+        <p>Введите логин</p>
+        <form action="" method="post">
+          <input type="text" class="login-pass" value="Введите логин">
+        </form>
+      </div>
+      <div class="log-in_first-password">
+        <p>Введите пароль</p>
+        <form action="" method="post">
+          <input type="password" class="login-pass" value="Пароль">
+        </form>
+      </div>
+      <div class="sign-in_continue">
+        <p>Войти</p>
+      </div>
+      <div class="sign-in_log-in">
+        Зарегистрироваться
+      </div>
     </div>
 
     <div class="modal-window_create-new-game">
@@ -51,7 +80,7 @@
         Создать анонимную игру
       </div>
       <div class="modal-window-creating_buttons">
-        <a href="/host" class="modal-window-creating_create-game">
+        <a href= "host" class="modal-window-creating_create-game">
           Создать игру
         </a>
         <div class="modal-window-creating_sign-in">
