--- a/QRPuzzel/main/templates/main/GamePage.html
+++ b/QRPuzzel/main/templates/main/GamePage.html
@@ -32,44 +32,58 @@
     </div>
     <div class="puzzle-pieces" id="puzzle-pieces">
         <div class="piece">
-            <input id="1" class="piece_up" type="radio" name="radio" value="1">
-            <label for="1" class="part"></label>
-        </div>
-        <div class="piece">
-            <input id="2" class="piece_up" type="radio" name="radio" value="1">
-            <label for="2" class="part"></label>
-        </div>
-        <div class="piece">
-            <input id="3" class="piece_up" type="radio" name="radio" value="1">
-            <label for="3" class="part"></label>
-        </div>
-        <div class="piece">
-            <input id="4" class="piece_up" type="radio" name="radio" value="1">
-            <label for="4" class="part"></label>
-        </div>
-       <div class="piece">
-            <input id="5" class="piece_up" type="radio" name="radio" value="1">
-            <label for="5" class="part"></label>
-        </div>
-        <div class="piece">
-            <input id="6" class="piece_up" type="radio" name="radio" value="1">
-            <label for="6" class="part"></label>
-        </div>
-        <div class="piece">
-            <input id="7" class="piece_up" type="radio" name="radio" value="1">
-            <label for="7" class="part"></label>
+            <input id="9" class="piece_up" type="radio" name="radio" value="1">
+            <div class="img_div" >
+                <img class="Myimg" src="../../static/image/part_2_2.jpg" tabindex="0">
+            </div>
         </div>
         <div class="piece">
             <input id="8" class="piece_up" type="radio" name="radio" value="1">
-            <label for="8" class="part"></label>
+            <div class="img_div" >
+                <img class="Myimg" src="../../static/image/part_2_1.jpg" tabindex="0">
+            </div>
         </div>
         <div class="piece">
-            <input id="9" class="piece_up" type="radio" name="radio" value="1">
-            <label for="9" class="part">
-                <div class="img_div">
-                    <img class="img" src="../../static/image/part_0_0.jpg">
-                </div>
-            </label>
+            <input id="7" class="piece_up" type="radio" name="radio" value="1">
+            <div class="img_div" >
+                <img class="Myimg" src="../../static/image/part_2_0.jpg" tabindex="0">
+            </div>
+        </div>
+        <div class="piece">
+            <input id="6" class="piece_up" type="radio" name="radio" value="1">
+            <div class="img_div" >
+                <img class="Myimg" src="../../static/image/part_1_2.jpg" tabindex="0">
+            </div>
+        </div>
+       <div class="piece">
+            <input id="5" class="piece_up" type="radio" name="radio" value="1">
+            <div class="img_div" >
+                <img class="Myimg" src="../../static/image/part_1_1.jpg" tabindex="0">
+            </div>
+        </div>
+        <div class="piece">
+           <input id="4" class="piece_up" type="radio" name="radio" value="1">
+            <div class="img_div" >
+                <img class="Myimg" src="../../static/image/part_1_0.jpg" tabindex="0">
+            </div>
+        </div>
+        <div class="piece">
+            <input id="3" class="piece_up" type="radio" name="radio" value="1">
+            <div class="img_div" >
+                <img class="Myimg" src="../../static/image/part_0_2.jpg" tabindex="0">
+            </div>
+        </div>
+        <div class="piece">
+           <input id="2" class="piece_up" type="radio" name="radio" value="1">
+            <div class="img_div" >
+                <img class="Myimg" src="../../static/image/part_0_1.jpg" tabindex="0">
+            </div>
+        </div>
+        <div class="piece">
+            <input id="1" class="piece_up" type="radio" name="radio" value="1">
+            <div class="img_div" >
+                <img class="Myimg" src="../../static/image/part_0_0.jpg" tabindex="0">
+            </div>
         </div>
     </div>
   </main>
